Fix top alignment of first title in sidebar

--- a/cysec_backend/src/main/webapp/public/css/main.css
+++ b/cysec_backend/src/main/webapp/public/css/main.css
@@ -156,7 +156,7 @@ body {
 #page-content-wrapper,
 #sidebar-wrapper,
 #alert {
-    padding-top: 70px;
+    padding-top: 85px;
 }
 
 .global-nav + #wrapper #page-content-wrapper,
